# node-graph-execution-qt

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  PR_DESCRIPTION.md  README.md  coverage_comparison.md  pyproject.toml  requirements.txt  test_cook_debug.py  test_coverage_summary.md
examples/: basic_network.py  custom_node.py  test_dirty_state.py  test_new_features.py  test_param_setvalue.py  test_signal_class.py  test_signal_connection.py  test_signal_direct.py  test_weakref.py
nodegraph/: __init__.py
nodegraph/core/: __init__.py  data_types.py  signals.py
nodegraph/core/models/: __init__.py  connector_model.py  network_model.py  node_model.py  parameter_model.py
nodegraph/core/registry/: __init__.py  node_registry.py
nodegraph/core/serialization/: __init__.py  json_serializer.py  python_exporter.py
nodegraph/nodes/base/: __init__.py  base_node.py  python_node.py  subnet_node.py  variable_node.py
nodegraph/nodes/operators/: __init__.py  math_nodes.py
nodegraph/nodes/utils/: __init__.py  merge_node.py
tests/: run_all_tests.py  test_cook_debug.py  test_data_types.py  test_json_serializer.py  test_models.py  test_network.py  test_node_registry.py  test_operators.py  test_python_exporter.py  test_serialization.py  test_signals.py  test_topological_execution.py  test_variable_nodes.py
